Fixed SPacing within Public Inquary Form

--- a/src/PropertyTaxPortal/wwwroot/css/Publicinquiry.css
+++ b/src/PropertyTaxPortal/wwwroot/css/Publicinquiry.css
@@ -61,6 +61,14 @@
     font-size: 15px;
     color: #000000;
 }
+.form-group {
+    margin-bottom: 0;
+}
+
+.pof-title {
+    margin-top: 30px;
+    position: relative;
+}
 
 
 
